# trading-agent

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
deploy/: .env.example  docker-compose.yml
services/analysis-adapter/: Dockerfile  app.py  db.py
services/analysis-adapter/tests/: test_analysis_adapter.py
services/backtest-service/: Dockerfile  README.md  app.py  data.py  pyproject.toml  strategies.py
services/backtest-service/tests/: test_backtest_service.py
services/exchange-bridge/: Dockerfile  README.md  app.py  exchange_client.py  pyproject.toml
services/exchange-bridge/tests/: test_app.py  test_exchange_bridge_app.py
services/execution-service/: app.py
services/execution-service/tests/: test_execution_service.py
services/ibkr-bridge/: app.py  ibkr_client.py
services/ibkr-bridge/tests/: test_app.py  test_ibkr_client.py
services/orchestrator/: app.py  db.py
services/orchestrator/tests/: test_deploy_compose_ports.py  test_orchestrator.py
services/risk-engine/: app.py
services/risk-engine/tests/: test_risk_engine.py
