[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-exchange-bridge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.29,<1",
  "pydantic>=2.7,<3",
  "httpx>=0.27,<1",
  "ccxt>=4.4,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
  "httpx>=0.27,<1",
]

[tool.ruff]
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests"]

[tool.setuptools]
py-modules = ["app", "exchange_client"]
